[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conkrit"
version = "0.1.0"
description = "A Python library for reinforced concrete design calculations"
authors = [
  { name = "Nicolás Moreno", email = "you@domain.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = []