[tool.poetry]
name         = "conkrit"
version      = "0.1.0"
description  = "A Python library for reinforced concrete design calculations"
authors      = ["Nicolás Moreno <you@domain.com>"]
license      = "MIT"
readme       = "README.md"
packages     = [{ include = "conkrit", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pint   = "^0.24.4"    # or whatever the latest version is

[tool.poetry.dev-dependencies]
pytest = "^7.2"
black  = "^23.1"

[build-system]
requires       = ["poetry-core>=1.8.0"]
build-backend  = "poetry.core.masonry.api"


